	 widget/widget.c: add current emulation speed to GTK+ statusbar.
20031116 fuse.c, timer.[ch]: better speed estimation just after emulation
	 unpause (or startup).
20031117 memory.h, scld.c, tape.c, tc2068.c: get TC2068 memory routines
	 working again.
20031118 ui/gtk/gtkui.c: make speed estimates work properly after the GTK+
	 pause function is used.
20031119 Merge the 'generic' and TC2068 paging schemes.
20031120 psg.c: write pause lengths out correctly.
20031120 specplus3.c: make the 64Kb RAM configurations work again.
20031124 timer.c: prevent too big a 'backlog' from occuring.
20031127 memory.h: ensure 'address' is a 16-bit value before using it.
20031128 fuse.c: initialise the poke finder on startup.
20031128 ui/gtk/gtkui.c: split create_dialog into multiple functions.
20031201 spec16.c: ensure we have a prototype for memset().
20031202 Some --enable-warnings tidy-ups.
20031202 machine.c: fix a small (but definite) memory leak.
20031203 ui/gtk/debugger.c: add ability to turn individual 'panes' on and
	 off.
20031206 event.[ch], ui/gtk/debugger.c: add a 'pending events' pane to the
	 debugger.
20031207 event.[ch]: use the defined enum for event type variables.
20031209 ui/gtk/gtkjoystick.c: fix filename in initial comment.
20031209 ChangeLog: bring up-to-date.
20031214 widget/filesel.c: on Win32, chdir does not return ENOTDIR for not
	 a directory, so check explicitly (Marek).
20031214 fuse.c, spectrum.c: DirectX sound routines do not provide timing
	 control, so always use the timer_* routines.
20031214 Generalise the low-level sound routines.
20031215 machine.c: remove unused #includes.
20031216 ui/svga/svgajoystick.c: remove use of BYTE, WORD (Witold).
20031226 ui/gtk/debugger.c: use a smaller monospaced font under GTK 2.
20031227 Add reverse page mappings to the memory_page structure.
20031227 display.c, memory.c: make writes to the screen work when the
	 screen is paged in other than at 0x4000.