@@ -113,6 +113,8 @@ sp|pc|ix|iy { yylval.reg = debugger_register_hash( yytext );
 "&&"		{ return LOGICAL_AND; }
 "||"		{ return LOGICAL_OR; }
 
+":"		{ return ':'; }
+
 ${HEX}+		{ yylval.integer = strtol( yytext+1, NULL, 16 );
 		  return NUMBER; }
 0x{HEX}+	{ yylval.integer = strtol( yytext+2, NULL, 16 );
