@@ -64,13 +64,23 @@ typedef enum debugger_breakpoint_life {
 
 extern const char *debugger_breakpoint_life_text[];
 
+typedef struct debugger_breakpoint_value {
+
+  int page;
+  libspectrum_word value;
+
+} debugger_breakpoint_value;
+
 typedef struct debugger_expression debugger_expression;
 
 /* The breakpoint structure */
 typedef struct debugger_breakpoint {
   size_t id;
   enum debugger_breakpoint_type type;
+
+  int page;
   libspectrum_word value;
+
   size_t ignore;		/* Ignore this breakpoint this many times */
   enum debugger_breakpoint_life life;
   debugger_expression *condition; /* Conditional expression to activate this
